k8s-infra-aws-ssm-dev-uat/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitor
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - us-east-1a
      tolerations:
        - key: workload
          operator: Equal
          value: stateful
          effect: NoSchedule
      securityContext:
        runAsUser: 472
        runAsGroup: 472
        fsGroup: 472
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: grafana
          image: grafana/grafana:13.0.2
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources
            - name: grafana-dashboard-provider
              mountPath: /etc/grafana/provisioning/dashboards
            - name: grafana-dashboards
              mountPath: /var/lib/grafana/dashboards/dev
            - name: grafana-uat-dashboards
              mountPath: /var/lib/grafana/dashboards/uat
            - name: grafana-logs-dashboards
              mountPath: /var/lib/grafana/dashboards/logs
            - name: grafana-prod-dashboards
              mountPath: /var/lib/grafana/dashboards/prod
            - name: grafana-data
              mountPath: /var/lib/grafana-data
              subPath: grafana
      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-provider
          configMap:
            name: grafana-dashboard-provider
        - name: grafana-dashboards
          configMap:
            name: grafana-dashboards
        - name: grafana-uat-dashboards
          configMap:
            name: grafana-uat-dashboards
        - name: grafana-logs-dashboards
          configMap:
            name: grafana-logs-dashboards
        - name: grafana-prod-dashboards
          configMap:
            name: grafana-prod-dashboards
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data
