k8s-infra-aws-ssm-dev-uat/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitor
  annotations:
    alb.ingress.kubernetes.io/group.name: demo-react-eks-dev
    alb.ingress.kubernetes.io/group.order: "2"
    alb.ingress.kubernetes.io/load-balancer-name: elb-react-eks-dev-uat
    alb.ingress.kubernetes.io/subnets: subnet-0ca21f0f484edd27d,subnet-0d5b19984b533f703
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:__AWS_ACCOUNT_ID__:certificate/ed9119c0-c6a7-49ac-84cf-ded38b29491c
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/tags: Project=demo-eks-dev,Environment=shared,ManagedBy=kubernetes,Name=elb-react-eks-dev-uat
    alb.ingress.kubernetes.io/security-groups: PLACEHOLDER_FRONTEND_SG,PLACEHOLDER_BACKEND_SG
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
spec:
  ingressClassName: alb
  rules:
    - host: grafana-demo.h0m3.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
